Customers, Products, Shipping Routes Implementation

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,22 @@
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
+# ShipStation API Configuration
+VITE_SHIPSTATION_API_URL=https://ssapi.shipstation.com
+VITE_SHIPSTATION_API_KEY=your-shipstation-api-key
+VITE_SHIPSTATION_API_SECRET=your-shipstation-api-secret
+VITE_SHIPSTATION_WAREHOUSE_ID=your-warehouse-id
+
+# Application Environment
+VITE_APP_ENVIRONMENT=development
+VITE_APP_VERSION=1.0.0
+
 # Optional: Additional service keys (not currently required for basic functionality)
 # VITE_RESEND_API_KEY=your-resend-api-key
 # VITE_TWILIO_ACCOUNT_SID=your-twilio-account-sid  
 # VITE_TWILIO_AUTH_TOKEN=your-twilio-auth-token
 # VITE_TWILIO_PHONE_NUMBER=your-twilio-phone-number
+
+# Note: In production, sensitive values like API keys should be handled server-side
+# These VITE_ prefixed variables are exposed to the browser
+# For production, consider using server-side environment variables and API proxies
